2008-06-04  Ben Van Mechelen  <me@benvm.be>

	* plugins/live_data/live_data.py:
	    remove some print statements
	    obd designation is now a oneshot view
	

2008-06-04  Ben Van Mechelen  <me@benvm.be>

	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/prefs.py:
	* garmon/scheduler.py:
    * scripts/elm_sim.py:
	    Try to increase speed
	       -Add a baudrate preference.
	       -Try to increase baudrate after connection (needs investigation)
           -Add a refresh rate label to the statusbar


2008-05-30  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* data/Makefile.am:
	* data/garmon.schemas:
	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	    Fix the gconf magic.
	    

2008-05-29  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/plugin_manager.py:
	    Removed all startable and stoppable stuff as all plugins
	    need to implement start and stop methods 


2008-05-29  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_clearer/dtc_clearer.py:
	    Implement start and stop methods
	

2008-05-20  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    Add a method to read special commands
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
		new Command and Sensor class
	    got rid of OBDData and friends
	* scripts/elm_sim.py:
	    better simulate the behaviour of an ELM device


2008-05-08  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_clearer/dtc_clearer.py:
        implement unload method
        

2008-05-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/dtc_reader/dtc_reader.py:
	    implemented get_mil and get_dtc_num
	    

2008-05-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    Add interface to base class
	* garmon/plugin.py:
	    Add interface to base class
	    inherit from GObject